[package]
name = "pallet-dynamic-fee"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
description = "Dynamic fee handling for EVM."
license = "Apache-2.0"

[dependencies]
async-trait = "0.1"
serde = { version = "1.0.101", optional = true }

codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
scale-info = { version = "2.0.0", default-features = false, features = ["derive"] }
sp-core = { version = "6.0.0", path = "../../primitives/core", default-features = false }
sp-inherents = { version = "4.0.0-dev", path = "../../primitives/inherents", default-features = false }
sp-runtime = { version = "6.0.0", path = "../../primitives/runtime", default-features = false }
sp-std = { version = "4.0.0", path = "../../primitives/std", default-features = false }

frame-support = { version = "4.0.0-dev", path = "../../frame/support", default-features = false }
frame-system = { version = "4.0.0-dev", path = "../../frame/system", default-features = false }

fp-dynamic-fee = { version = "1.0.0", path = "../../primitives/dynamic-fee", default-features = false }
fp-evm = { version = "3.0.0-dev", path = "../../primitives/evm", default-features = false }

[dev-dependencies]
pallet-timestamp = { version = "4.0.0-dev", path = "../../frame/timestamp", default-features = false }
sp-io = { version = "6.0.0", path = "../../primitives/io", default-features = false }

[features]
default = ["std"]
std = [
	"serde",

	"codec/std",
	"scale-info/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-runtime/std",
	"sp-std/std",
	"frame-system/std",
	"frame-support/std",

	"fp-dynamic-fee/std",
	"fp-evm/std",
]
